# prome_device

./: env.sh
config/: pwfile.example
config/data/: default.json
config/data/ca/: ca.crt  client.crt  client.csr  client.key
include/: basic_types.h
include/goahead/: goahead.h
include/server/: goahead.h
include/xls/libxls/: xlstool.h
src/: CMakeLists.txt
src/bplib/: CMakeLists.txt  README.md  compile.sh  init.go  jsonReader.go  jsonReader_test.go  proofForwarder.go  proofForwarder_test.go  standard.json  standard2.json  standardRender.go  standardRender_test.go
src/bplib/bulletproof/: aggbulletproof.go  aggbulletproof_test.go  algebra.go  algebra_test.go  bulletproof.go  bulletproof_test.go  innerproduct.go  innerproduct_test.go  key.go  schnorr.go
src/bplib/common/: bytes.go  contract.go  inner_call.go  systemContract.go  types.go
src/bplib/common/bitutil/: compress_test.go
src/bplib/common/hexutil/: json_example_test.go
src/bplib/common/math/: big_test.go
src/bplib/crypto/: crypto.go  crypto_test.go  signature_cgo.go  signature_test.go
src/bplib/crypto/bn256/: bn256_fast.go  bn256_fuzz.go  bn256_slow.go
src/bplib/crypto/ecies/: ecies_test.go  params.go
src/bplib/rlp/: encode_test.go
src/src_c/: CMakeLists.txt
src/src_c/algorithm/: CMakeLists.txt
src/src_c/algorithm/aes/: CMakeLists.txt  aes.c  aes.h  aes_cbc.c  aes_cbc.h  aes_ctr.c  aes_ctr.h  aes_ofb.c  aes_ofb.h
src/src_c/algorithm/apis/: algorithm_api.c  algorithm_api.h
src/src_c/algorithm/average/: average.c  average.h
src/src_c/algorithm/base/: base58.c  base64.c
src/src_c/algorithm/ecdsa/: ecdsa.c  secp256k1.c  secp256k1_api.c  secp256k1_api.h
src/src_c/algorithm/md5/: md5.c  md5.h
src/src_c/database/: CMakeLists.txt  csqlite3.c  csqlite3.h
src/src_c/device/: CMakeLists.txt
src/src_c/device/comm/: blockchain.c  blockchain.h  bulletproof.c  bulletproof.h  dev_cfg.c  dev_cfg.h  dev_json.c  dev_json.h  dev_mqtt.c  dev_mqtt.h  dev_pkg.c  dev_pkg.h  dev_rule.c  dev_rule.h  upgrade.c  upgrade.h
src/src_c/device/gateway/: gateway.c  gateway.h
src/src_c/device/humsensor/: humsensor.c  humsensor.h  humsensor_db.c  humsensor_db.h
src/src_c/device/ipcamera/: ipcamera.c  ipcamera.h  ipcamera_db.c  ipcamera_db.h
src/src_c/device/plc/: plc.c  plc.h  plc_db.c  plc_db.h
src/src_c/device/rfid/: rfid.c  rfid.h  rfid_db.c  rfid_db.h
src/src_c/device/tempsensor/: tempsensor.c  tempsensor.h  tempsensor_db.c  tempsensor_db.h
src/src_c/pre/: CMakeLists.txt  demo设计.txt  pre_api.c  pre_api.h  pre_comm.c  pre_comm.h  pre_json.c  pre_json.h  pre_proxy.c  pre_receiver.c  pre_sender.c
src/src_c/protocol/: CMakeLists.txt
src/src_c/protocol/http/: http_client.c  http_client.h
src/src_c/protocol/modbus/: modbus_api.c  modbus_api.h
src/src_c/protocol/mqtt/: mosquitto_api.c  mosquitto_api.h
src/src_c/protocol/tlv/: tlv.c  tlv.h
