#cmake file for project association                     #表示注释
#author:chenxiaoquan@wxblockchain.com
#created:>2021/4/9

ADD_SUBDIRECTORY(tools)
ADD_SUBDIRECTORY(algorithm)
ADD_SUBDIRECTORY(database)
ADD_SUBDIRECTORY(device)
ADD_SUBDIRECTORY(protocol)
ADD_SUBDIRECTORY(samurai_client)
ADD_SUBDIRECTORY(pre)

