

set(EX_HEAD_FILE ${EX_HEAD_FILE} ${CMAKE_CURRENT_SOURCE_DIR}/comm/dev_comm.h)
set(EX_HEAD_FILE ${EX_HEAD_FILE} ${CMAKE_CURRENT_SOURCE_DIR}/comm/dev_cfg.h)
set(EX_HEAD_FILE ${EX_HEAD_FILE} ${CMAKE_CURRENT_SOURCE_DIR}/comm/dev_json.h)
set(EX_HEAD_FILE ${EX_HEAD_FILE} ${CMAKE_CURRENT_SOURCE_DIR}/comm/bulletproof.h)
set(EX_HEAD_FILE ${EX_HEAD_FILE} ${CMAKE_CURRENT_SOURCE_DIR}/comm/blockchain.h)
set(EX_HEAD_FILE ${EX_HEAD_FILE} ${CMAKE_CURRENT_SOURCE_DIR}/comm/dev_rule.h)
set(EX_HEAD_FILE ${EX_HEAD_FILE} ${CMAKE_CURRENT_SOURCE_DIR}/comm/upgrade.h)
set(EX_HEAD_FILE ${EX_HEAD_FILE} ${CMAKE_CURRENT_SOURCE_DIR}/gateway/gateway.h)

if (HUMSENSOR)
	#生成温湿度传感器的c文件
	option(DEVICE 	"device support"  	ON)
	add_definitions(-DHUMSENSOR)
	set(DEV_NAME humsensor)
	set(EX_HEAD_FILE ${EX_HEAD_FILE} ${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME}/${DEV_NAME}.h)
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME})
	
	set(DEV_NAME_SRC ${DEV_NAME_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME}/${DEV_NAME}.c)
	set(DEV_NAME_SRC ${DEV_NAME_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME}/${DEV_NAME}_db.c)
	set(DEVICE_SRC ${DEVICE_SRC} ${DEV_NAME_SRC})
endif()

if (TEMPSENSOR)
	#生成温湿度传感器的c文件
	option(DEVICE 	"device support"  	ON)
	add_definitions(-DTEMPSENSOR)
	set(DEV_NAME tempsensor)
	set(EX_HEAD_FILE ${EX_HEAD_FILE} ${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME}/${DEV_NAME}.h)
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME})
	
	set(DEV_NAME_SRC ${DEV_NAME_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME}/${DEV_NAME}.c)
	set(DEV_NAME_SRC ${DEV_NAME_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME}/${DEV_NAME}_db.c)
	set(DEVICE_SRC ${DEVICE_SRC} ${DEV_NAME_SRC})
endif()

if (RFID)
	option(DEVICE 	"device support"  	ON)
	add_definitions(-DRFID)
	set(DEV_NAME rfid)
	set(EX_HEAD_FILE ${EX_HEAD_FILE} ${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME}/${DEV_NAME}.h)
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME})
	
	set(DEV_NAME_SRC ${DEV_NAME_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME}/${DEV_NAME}.c)
	set(DEV_NAME_SRC ${DEV_NAME_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME}/${DEV_NAME}_db.c)
	set(DEVICE_SRC ${DEVICE_SRC} ${DEV_NAME_SRC})
endif()

if (PLC)
	option(DEVICE 	"device support"  	ON)
	add_definitions(-DPLC)
	set(DEV_NAME plc)
	set(EX_HEAD_FILE ${EX_HEAD_FILE} ${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME}/${DEV_NAME}.h)
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME})
	
	set(DEV_NAME_SRC ${DEV_NAME_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME}/${DEV_NAME}.c)
	# set(DEV_NAME_SRC ${DEV_NAME_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME}/${DEV_NAME}_db.c)
	set(DEVICE_SRC ${DEVICE_SRC} ${DEV_NAME_SRC})
endif()

if (IPCAMERA)
	#生成液位计的c文件
	option(DEVICE 	"device support"  	ON)
	add_definitions(-DIPCAMERA)
	set(DEV_NAME ipcamera)
	set(EX_HEAD_FILE ${EX_HEAD_FILE} ${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME}/${DEV_NAME}.h)
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME})
	
	set(DEV_NAME_SRC ${DEV_NAME_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME}/${DEV_NAME}.c)
	set(DEV_NAME_SRC ${DEV_NAME_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/${DEV_NAME}/${DEV_NAME}_db.c)
	set(DEVICE_SRC ${DEVICE_SRC} ${DEV_NAME_SRC})
endif()

set(DEVICE_SRC ${DEVICE_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/comm/dev_comm.c)
set(DEVICE_SRC ${DEVICE_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/comm/dev_json.c)
set(DEVICE_SRC ${DEVICE_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/comm/dev_cfg.c)
# if(BULLETPROOF_LIB)
	set(DEVICE_SRC ${DEVICE_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/comm/bulletproof.c)
# endif()
set(DEVICE_SRC ${DEVICE_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/comm/blockchain.c)
set(DEVICE_SRC ${DEVICE_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/comm/dev_rule.c)
set(DEVICE_SRC ${DEVICE_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/comm/upgrade.c)
set(DEVICE_SRC ${DEVICE_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/comm/dev_pkg.c)
set(DEVICE_SRC ${DEVICE_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/gateway/gateway.c)
set(DEVICE_SRC ${DEVICE_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/comm/dev_mqtt.c)


if (DEVICE)
	add_library(device SHARED ${DEVICE_SRC})
	SET_TARGET_PROPERTIES(device PROPERTIES VERSION ${SW_VERSION} SOVERSION 1)
	INSTALL(TARGETS device LIBRARY DESTINATION lib)
	INSTALL(FILES ${EX_HEAD_FILE} DESTINATION ${INC_PATH}/device)
endif()



