

set(EX_HEAD_FILE ${EX_HEAD_FILE} ${CMAKE_CURRENT_SOURCE_DIR}/pre_api.h)
set(EX_HEAD_FILE ${EX_HEAD_FILE} ${CMAKE_CURRENT_SOURCE_DIR}/pre_comm.h)

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} PRE_SRC)

add_library(pre SHARED ${PRE_SRC})

SET_TARGET_PROPERTIES(pre PROPERTIES VERSION ${SW_VERSION} SOVERSION 1)
INSTALL(TARGETS pre LIBRARY DESTINATION lib)
INSTALL(FILES ${EX_HEAD_FILE} DESTINATION ${INC_PATH}/pre)




